# BulgarianGermanLearningApp

./: .eslint-rules-deviations.md  .eslintignore  .eslintrc.json  .eslintrc.json.backup  .gitignore  .lintstagedrc.json  .mcp.json  .prettierignore  .stylelintrc.json  .tsbuildinfo  404.html  A1_VOCABULARY_EXTRACTION_CHECKLIST.md  AGENTS.md  AudioManager.swift  BACKEND_FRONTEND_COMPATIBILITY_SESSION.md  BUN_MCP_QUICK_SETUP.md  BulgarianVocabularyApp.swift  CACHE_CLEARING.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODEOWNERS  COMPLETION_REPORT.md  COMPLETION_REPORT_DEC12.md  COMPREHENSIVE_TESTING_PLAN.md  COPILOT_INSTRUCTIONS_UPDATE.md  CRITICAL_FIXES_PHASE_5.md  CURRENT_WORK_PLAN.md  Cargo.toml  ContentView.swift  DEPLOYMENT_DOCUMENTATION_INDEX.md  DEPLOYMENT_FINAL_SUMMARY.md  DEPLOYMENT_READINESS_CHECKLIST.md  DESIGN_CONCEPT.md  DataStore.swift  DirectionToggle.swift  END_TO_END_DEPLOYMENT_GUIDE.md  ENRICHED_VOCABULARY_TEST_REPORT.md  ENRICHED_VOCABULARY_UX_SUMMARY.md  ENRICHMENT_ACTION_PLAN.md  ENRICHMENT_ANALYSIS_STRATEGIC_RESPONSE.md  (+145 more)
.claude/: .credentials.json
.codacy/: codacy.yaml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.gocache/: trim.txt
.husky/: pre-push
.roocode/: MIGRATION.md  README.md  SETUP_COMPLETE.md  mcp.json  (+1 more)
web/: Cargo.toml  index.html
web/src/: audio.rs  audio_controls.rs  grammar.rs  level_selector.rs  lib.rs  main.rs  vocabulary.rs
web/static/: styles.css
web/static/data/: grammar.json  vocabulary.json
web/static/styles/: practice.css
web/tests/: audio.rs
(+6659 files in other folders)
