[package]
name = "bglg_app_web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
bglg_app_lib = { path = "../lib" }
web-sys = { version = "0.3", features = [
    "Document",
    "CustomEvent",
    "CustomEventInit",
    "EventTarget",
    "InputEvent",
    "HtmlInputElement",
    "HtmlSelectElement",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "Storage",
    "Window",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
